# opticalglass

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  README.md  README.rst  environment.yml  glasserror.py  glassfactory.py  hoya.py  ohara.py  schott.py  setup.cfg  setup.py
data/: HOYA.xlsx  SCHOTT.xls
docs/: README.rst  conf.py  index.rst  opticalglass.rst  requirements.txt
docs/OG_Pandas_intro/: OG_Pandas_intro.rst
docs/OG_Quickstart/: OG_Quickstart.rst
docs/OG_RefractiveIndexInfo/: OG_RefractiveIndexInfo.rst
notebooks/: Buchdahl models.ipynb  Decode_glassnames.ipynb  ModelGlass dev.ipynb  ModelGlass.ipynb  OG_Pandas_intro.ipynb  OG_Quickstart.ipynb  OG_RefractiveIndexInfo.ipynb  OpenModelsTest.ipynb  Pandas_glasscat.ipynb  Robb1983 Glass Catalog.ipynb  Robb1983.ipynb  buchdahl1-dev.ipynb  buchdahl1.ipynb  glassmap3d.ipynb  pd_glasscat.ipynb  pd_glasscat_CDGM.ipynb  pd_glasscat_Hikari.ipynb  pd_glasscat_Hoya.ipynb  pd_glasscat_Ohara.ipynb  pd_glasscat_Schott.ipynb  pd_glasscat_Sumita.ipynb  rindexinfo-create_and_save_material.ipynb  rindexinfo-create_glass.ipynb  rindexinfo-create_material.ipynb  rindexinfo-dev.ipynb  rindexinfo-explore.ipynb  rindexinfo-traverse_library.ipynb  rindexinfo.ipynb
opticalglass/: __init__.py  buchdahl.py  caselessDictionary.py  cdgm.py  glass.py  glasserror.py  glassfactory.py  glassmap.py  glassmapviewer.py  glasspolygons.py  hikari.py  hoya.py  ohara.py  opticalmedium.py  schott-optical-glass-overview-excel-table-english.xls  schott.py  spectral_lines.py  sumita.py  util.py
opticalglass/data/: HIKARI.xls  HIKARI.xlsx  HIKARI_prev.xls  SUMITA.xlsx  robb1983_data_final.txt
opticalglass/qtgui/: glassmapviewer.py
opticalglass/test/: test_cdgm.py  test_glassfactory.py  test_hikari.py  test_hoya.py  test_ohara.py  test_schott.py  test_sumita.py  test_transmission.py  util.py
src/opticalglass/: __init__.py  buchdahl.py  cdgm.py  glass.py  glasserror.py  glassfactory.py  glassmap.py  glassmapviewer.py  glasspolygons.py  modelglass.py  openpyxl_script.py  opticalmedium.py  rindexinfo.py  schott.py  spectral_lines.py  util.py
src/opticalglass/data/: CDGM.xls  CDGM202409.xlsx  OHARA.xlsx  ~$HIKARI.xlsx
src/opticalglass/test/: test_cdgm.py  test_create_glass.py  test_glassfactory.py  test_hoya.py  test_sumita.py
test/: cmd_line_example.py  test_cdgm.py  test_glassfactory.py  test_hikari.py  test_hoya.py  test_ohara.py  test_schott.py  test_sumita.py  test_transmission.py
update/: catupdate.py
